<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navigation Menu</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Navigation Menu Opened</string>
    <string name="drawer_close">Navigation Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>My Timetable</item>
        <item>Edit Timetable</item>
        <item>Map</item>
        <item>Entry Info</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in same order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_edit</item>
        <item>@drawable/ic_map_icon</item>
        <item>@drawable/ic_plusone_medium_off_client</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="choose_day_label">Choose a Day:</string>
    <string name="paper_label">Paper:</string>
    <string name="paper_hint">enter paper code</string>
    <string name="room_label">Room:</string>
    <string name="room_hint">enter room code</string>
    <string name="type_label">Type:</string>
    <string name="type_spinner_prompt">choose a schedule type</string>
    <string name="time_label">Time:</string>
    <string name="time_start_spinner_prompt">start</string>
    <string name="time_end_spinner_prompt">end</string>
    <string name="add_new_entry_label">Add To Timetable</string>
    <string name="done_label">Done</string>

    <string name="otago_uni_title">University of Otago</string>
    <string name="otago_uni_snippet">Main campus of 1869 institution</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="time12am">12 am</string>
    <string name="time1am">1 am</string>
    <string name="time2am">2 am</string>
    <string name="time3am">3 am</string>
    <string name="time4am">4 am</string>
    <string name="time5am">5 am</string>
    <string name="time6am">6 am</string>
    <string name="time7am">7 am</string>
    <string name="time8am">8 am</string>
    <string name="time9am">9 am</string>
    <string name="time10am">10 am</string>
    <string name="time11am">11 am</string>
    <string name="time12pm">12 pm</string>
    <string name="time1pm">1 pm</string>
    <string name="time2pm">2 pm</string>
    <string name="time3pm">3 pm</string>
    <string name="time4pm">4 pm</string>
    <string name="time5pm">5 pm</string>
    <string name="time6pm">6 pm</string>
    <string name="time7pm">7 pm</string>
    <string name="time8pm">8 pm</string>
    <string name="time9pm">9 pm</string>
    <string name="time10pm">10 pm</string>
    <string name="time11pm">11 pm</string>

    <string name="updating">updating</string>

</resources>
