<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/daySelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_day_label"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/day_select_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>

    <!--Space
        android:id="@+id/spaceOnLeft"
        android:layout_width="45dp"
        android:layout_height="match_parent" /-->

    <!--ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/daySelector"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"-->
        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/daySelector"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:id="@+id/paperSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paper_label"
                    android:padding="10dp"/>
                <AutoCompleteTextView
                    android:id="@+id/paper_code_complete"
                    android:labelFor="@id/paper_code_complete"
                    android:layout_marginStart="5dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/paper_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/roomSelector"
                android:layout_below="@id/paperSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_label"
                    android:padding="10dp"/>
                <AutoCompleteTextView
                    android:id="@+id/room_code_complete"
                    android:labelFor="@id/room_code_complete"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/room_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/schedTypeSelector"
                android:layout_below="@+id/roomSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_label"
                    android:padding="10dp"/>
                <Spinner
                    android:id="@+id/schedule_type_spinner"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/type_spinner_prompt"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeSelectors"
                android:layout_below="@id/schedTypeSelector"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_label"
                    android:padding="10dp"/>
                <Spinner
                    android:id="@+id/startTimeSpinner"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/time_start_spinner_prompt"
                    android:spinnerMode="dropdown"/>
                <Spinner
                    android:id="@+id/endTimeSpinner"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/time_end_spinner_prompt"/>
            </LinearLayout>
        </RelativeLayout>
    <!--/ScrollView-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/relativeLayout2"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/add_new_entry_label"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/done_label"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</RelativeLayout>