<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/map_type_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/dividerVertical">

        <Button
            android:id="@+id/btn_normal"
            android:text="@string/map_type_normal"
            style="@style/AppTheme.map_type_buttons"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/btn_satellite"
            android:text="@string/map_type_satellite"
            style="@style/AppTheme.map_type_buttons"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/btn_hybrid"
            android:text="@string/map_type_hybrid"
            style="@style/AppTheme.map_type_buttons"
            android:background="?android:attr/selectableItemBackground"/>

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/map_type_button_layout"/>

</RelativeLayout>
